# stupidhack-2021

./: README.md  docker-compose.yml
back/: Dockerfile  app.py  check_similarity.py  draw_reference.py  find_countors.py  leilan.py  nocoaly.py  pyproject.toml  threshold_image.py  validate_image.py
back/tests/: 1_post_user.rest  2_1_users.rest  2_2_login.rest  2_find_user.rest  3_add_nocccoins.rest  4_1_transfers.rest  4_transfer_nocccoins copy 2.rest  4_transfer_nocccoins.rest  5_mine_nocccoin copy.rest  5_mine_nocccoin.rest  6_get_nocccblock.rest  get_user.rest  post_user.rest
front/: package.json
front/public/: index.html  manifest.json  robots.txt
front/public/assets/: nocccoin-logo.ai
front/src/: App.js  index.css
front/src/components/: Dashboard.js  Friend.js  Header.js  MenuButton.js  Mine.js  NewPhoto.js  Notification.js  PhotoGallery.js  useInit.js
front/src/pages/: FriendPage.js  Login.js  LoginPage.js  MinePage.js  RegisterPage.js  UserPage.js
front/src/services/: blogs.js  images.js  login.js  noccocoins.js  user.js
front/src/store/: index.js
front/src/styles/: index.js  theme.js
front/src/utils/: config.js
tgbot/: nocccoinbot.py
video/: kässäri.txt
