[tool.poetry]
name = "stupidhack-2021"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.64.0"
requests = "^2.25.1"
uvicorn = "^0.13.4"
argparse = "^1.4.0"
imutils = "^0.5.4"
opencv-python = "^4.5.2"
scikit-image = "^0.18.0"
numpy = "^1.20.2"
pydantic = "^1.8.1"
pymongo = "^3.11.4"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app:main"
